# nvproton

./: Cargo.toml  PKGBUILD  README.md  TODO_OLD.md
src/: cache.rs  cli.rs  config.rs  dx12_games.rs  gamemode.rs  games.rs  main.rs  mangohud.rs  presets.rs  runner.rs  status.rs  steam.rs
src/detection/: database.rs  fingerprint.rs  heroic.rs  lutris.rs  mod.rs  proton_nv.rs  steam.rs  vulkan.rs
src/ffi/: mod.rs
src/profile/: manager.rs  mod.rs  model.rs  persistence.rs
