[package]
name = "nvproton"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
directories = "5"
env_logger = "0.11"
glob = "0.3"
hex = "0.4"
libloading = "0.8"
log = "0.4"
once_cell = "1"
regex = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
thiserror = "1"
toml = "0.8"
walkdir = "2"
